<resources>
    <string name="app_name">Fake News Detection Android App</string>
    <string name="input_hint">Enter Input News to check for Fakeness</string>
    <string name="detect">Detect</string>
    <string name="mainimage">MainImage</string>
    <string name="output_result_here">Output result here</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="logo_description">This is a logo</string>
    <string name="login">Start</string>
    <string name="clear">clear</string>
</resources>